# quikrun

./: .gitignore  LICENSE  PKGBUILD  README.md  mise.toml  pyproject.toml
.github/workflows/: deploy-docs.yml  publish-aur.yml  publish-pypi.yml  release-gh.yml  sync-schemastore.yml  test.yml  update-packages.yml
docs/: package.json
docs/.vitepress/: config.mjs  navigation.mjs
docs/.vitepress/plugins/: autoRedirects.js  resolveVars.js  searchLinks.js
docs/.vitepress/theme/: MyLayout.vue  index.js  style.css
docs/md/: configuration.md  customizing-cmds.md  ide-integration.md  index.md  install.md  supported-languages.md  usage.md
src/cz/: bumper.sh  changelog.j2  cz.yaml
src/quikrun/: __init__.py  __main__.py  main.py
src/quikrun/lib/: __init__.py  config.py  loader.py  logger.py  runners.py  templates.py  utils.py
src/quikrun/metadata/: __init__.py  cmd_templates.py
src/run_code/: main.py
src/scripts/: generate_schema.py  sync_docs.py
tests/: test_import.py  test_version.py
