[project]
name = "quikrun"
version = "2.2.0"
description = "Run your code without hassle"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Soumadip Das", email = "soumadip@zohomail.in" }]

requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[project.urls]
Homepage = "https://github.com/soymadip/quikrun"
Repository = "https://github.com/soymadip/quikrun"

[project.scripts]
quikrun = "quikrun.main:main"  # the command quikrun should call the main function inside quikrun/main.py . The src/ part is invisible to Python — uv/pip adds src/ to the Python path automatically during install, so Python sees quikrun directly, not src.quikrun

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
